<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <string name="mode_ready">Snake\nPress Up To Play</string>
    <string name="mode_pause">Paused\nPress Up To Resume</string>
    <string name="mode_lose_prefix">Game Over\nScore: </string>
    <string name="mode_lose_suffix">\nPress Up To Play</string>
    <string name="snake_layout_text_text"></string>
    <string name="change_game_color_category">Change game colors</string>
    <string name="starting_speed_category">Starting Speed</string>
    <string name="resume">Resume</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="change_speed">Change Speed</string>
    <string name="slow">Slow</string>
    <string name="medium">Medium</string>
    <string name="fast">Fast</string>
    <string name="snake_prefs_name">Snake Preferences</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="snake_body_title">Snake Body</string>
    <string name="starting_speed_title">Milliseconds between moves</string>
    <string name="snake_head_and_apples_title">Snake Heads / Apples</string>
    <string name="wall_title">Walls</string>
    <string name="snake_body_default_summary">Default color red</string>
    <string name="snake_head_and_apples_default_summary">Default color yellow</string>
    <string name="wall_default_summary">Default color green</string>
    <string name="starting_speed_default_summary">Recommended: 100 (Fast) to 600 (Slow)</string>
    <string name="android_settings">Android Settings</string>
    <string name="settings">Settings</string>

</resources>